--- a/style.css
+++ b/style.css
@@ -13,70 +13,68 @@ Data: 26/03/2020
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
     vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /*General ----------------------------------------*/
-body{
+
+html, body {
     font: 15px/1.5 "Trebuchet MS";
     height: 100%;
 }
-.container{
+
+.container {
     width: 80%;
     margin: auto;
     overflow: hidden;
 }
 
 /*Header -------------------------------------------*/
-header{
+
+header {
     background-color: black;
     color: white;
 }
-header .content{
+
+header .content {
     float: left;
 }
-header h1{
+
+header h1 {
     font-size: 2em;
     font-style: italic;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -84,7 +82,8 @@ header h1{
     padding: 30px 0 0;
     line-height: 1em;
 }
-header h3{
+
+header h3 {
     font-size: 1.5em;
     font-weight: 100;
     font-family: 'Century Gothic';
@@ -92,50 +91,137 @@ header h3{
     padding: 0;
 }
 
-/*Sections -----------------------------------------*/
-section{
-    min-height: 400px;
-    text-align: center;
-}
-.section-title{
-    font-size: 1.8em;
-    font-family: 'Century Gothic';
-    font-style: oblique;
-    padding: 40px 0;
-}
-.content{
-    height: 100%;
-}
-.thumbnail{
+/*Sections ----------------------------------------*/
+
+.section-text {
     display: inline-block;
-    width: 40%;
-}
-.thumbnail img{
-    width: 100%;
+    width: 50%;
+    margin: 0;
+    padding: 15px;
+    vertical-align: top;
 }
 
 /*Sobre mim ----------------------------------------*/
-.section-text{
+
+.profile-thumbnail {
+    width: 40%;
+    height: 100%;
     display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    padding: 0 10px;
-    width: 55%;
-}
-.attribute{
-    font-weight: bolder;
-}
-.section-text p{
-    line-height: 2;
-}
-.button{
-    padding: 10px;
-    margin: 10px 0 0 0;
-    background-color: #E0172D;
-    border-radius: 10px;
-    text-decoration: none;
-    color: white;
-    font-size: 0.8em;
+    background: url(assets/img/foto-perfil.jpg);
+    background-size: cover;
+    margin: 0;
+    padding: 0;
 }
 
-/*Desenho ----------------------------------------------*/
+.wrapper {
+    width: 950px;
+    height: 430px;
+    margin: 0 auto;
+    -webkit-box-shadow: -1px 9px 46px -8px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 9px 46px -8px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 9px 46px -8px rgba(0, 0, 0, 0.75);
+    padding: 0;
+}
+
+.greetings {
+    width: 3em;
+    display: inline-block;
+    background-color: #e0172d;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+    font-size: 1em;
+    line-height: 0.5;
+    text-align: center;
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.name {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    color: #e0172d;
+}
+
+.name span {
+    font-weight: 100;
+    color: black;
+}
+
+.attribute {
+    font-weight: bold;
+    display: inline-block;
+    width: 150px;
+}
+
+.button {
+    background-color: #b31414;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.wrapper ul {
+    margin: 150px 0 0 0;
+}
+
+.social-media {
+    display: inline;
+    margin: 0 5px;
+}
+
+.social-media a {
+    text-decoration: none;
+}
+
+.social-media svg {
+    width: 2em;
+    height: 2em;
+    transition: ease-in-out 0.3s;
+    fill: gray;
+}
+
+.social-media svg:hover {
+    fill: #b31414;
+}
+
+/*Desenho favorito -------------------------------------------*/
+
+.section-title{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2em;
+    margin: 50px 0 30px 0;
+}
+.content{
+    width: 950px;
+    height: 430px;
+    margin: 0 auto;
+}
+
+.section-thumbnail {
+    width: 27%;
+    height: 75%;
+    vertical-align: middle;
+    display: inline-block;
+    background: url(assets/img/desenho.jpg);
+    background-size: cover;
+    margin: 0 0 0 40px;
+    padding: 0px;
+}
+
+.animation-text{
+    width: 60%;
+}
+
+.animation-title{
+    font-size: 1.3em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+}
