--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header {
 header h1 {
     font-size: 2em;
     font-style: italic;
-    font-family: "Franklin Gothic Medium";
+    font-family: "Franklin Gothic Medium" !important;
     margin: 0;
     padding: 30px 0 0;
     line-height: 1em;
@@ -87,7 +87,7 @@ header h1 {
 header h3 {
     font-size: 1.5em;
     font-weight: 100;
-    font-family: "Century Gothic";
+    font-family: "Century Gothic" !important;
     margin: 0 0 30px;
     padding: 0;
 }
