Text Margin Adjustment

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ header a {
         margin: 50px 0 0 0;
     }
     .animation-text{
-        margin: 20px 0;
+        margin: 20px 0 50px;
     }
     
     
